--- a/src/components/Tutor/index.css
+++ b/src/components/Tutor/index.css
@@ -2,3 +2,31 @@
     width: 300px;
     min-height: 200px;
 }
+
+.tutorList {
+    margin: 0 auto;
+    background: white;
+    padding: 10px 120px;
+}
+
+.tutorCard {
+    margin: 0 auto;
+    border-color:  #f2f2f2;
+    border-width: 2px;
+    border-radius: 8px;
+}
+
+.ant-card-head-title {
+    font-weight: bolder;
+    color: #990000;
+}
+
+img[alt] {
+    margin: 0 auto;
+    height: 193px;
+    width: 65%;
+}
+
+.moreBTN {
+    margin: 10% auto;
+}
