--- a/src/components/Landing/index.css
+++ b/src/components/Landing/index.css
@@ -4,15 +4,16 @@
 }
 .ant-layout-header{
     color:white;
-    background: #FA292A;
+    background: #990000;
     height: 16vh;
     text-align: center;
     font-size: 30px;
+    padding-top: 15px;
 }
-.ant-layout-header div{
-    font-size: 20px;
+.ant-layout-header{
+    font-size: 30px;
     color: #e5e5e5;
-    padding-top: -25px;
+    padding-top: -5px;
 }
 .ant-layout-footer {
     text-align: center;
@@ -23,7 +24,7 @@
   line-height: 1.5;
 }
 .ant-layout-content {
-    background: #FA292A;
+    background: #990000;
   color: #fff;
   min-height: 120px;
   line-height: 120px;
@@ -31,7 +32,6 @@
 .ant-layout-content{
   background: #5A7670;
   color: #fff;
-    text-align: center;
 }
 > .code-box-demo > div > .ant-layout {
   margin-bottom: 48px;
@@ -54,7 +54,7 @@
 }
 .WelcomePicContainer{
 
-    width:1280px;
+    width:100%;
     height:500px;
     mode:'fit' ;
 }
