--- a/src/components/Cart/index.css
+++ b/src/components/Cart/index.css
@@ -50,10 +50,10 @@ hr{
     border: 1px solid #e8e8e8;
 }
 
-.ant-btn{
+.button{
     background-color: #990000;
     color: white;
-    width: 100px;
+    padding: 15px;
     height: 50px;
     margin-left: 33.3%;
 }
