--- a/src/components/Landing/index.css
+++ b/src/components/Landing/index.css
@@ -25,13 +25,13 @@
 }
 .ant-layout-content {
     background: #990000;
-  color: #fff;
+  color: #000;
   min-height: 120px;
   line-height: 120px;
 }
 .ant-layout-content{
   background: #5A7670;
-  color: #fff;
+  color: #000;
 }
 > .code-box-demo > div > .ant-layout {
   margin-bottom: 48px;
@@ -49,11 +49,10 @@
 }
 
 .ant-carousel .slick-slide h3 {
-
   color: #fff;
 }
-.WelcomePicContainer{
 
+.WelcomePicContainer{
     width:100%;
     height:500px;
     mode:'fit' ;
