--- a/src/components/PurchasedCourses/index.css
+++ b/src/components/PurchasedCourses/index.css
@@ -43,3 +43,10 @@
 .blogPageContent {
     background: white;
 }
+.content{
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 3;
+}
