--- a/src/components/ClassList/index.css
+++ b/src/components/ClassList/index.css
@@ -45,6 +45,7 @@
     color: #810000;
     font-size: 15px;
     font-weight: bold;
+    float: right;
 }
 
 .clear{
@@ -64,12 +65,8 @@ a:hover{
     color: #FFCD00;
 }
 
-.description{
+.tutor{
     float: left;
-}
-
-.price{
-    float: right;
 }
 
 .ant-list-item-extra{
@@ -78,6 +75,153 @@ a:hover{
     text-align: center;
 }
 
+.addButton{
+    background-color: #990000;
+    color: white;
+    margin-top: 10px;
+}
+
+.detailClassContainer{
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.detailClassLeft{
+    width: 55%;
+    float: left;
+}
+
+.detailClassTitle{
+    font-size: 40px;
+    line-height: normal;
+    margin-bottom: 10px;
+    margin-top: 20px;
+    height: auto;
+}
+
+.detailClassSubtitle{
+    margin-top: 20px;
+}
+
+.detailClassAvatar{
+    margin-left: 20px;
+    float: left;
+}
+
+.detailClassTutor{
+    margin-left: 20px;
+    float: left;
+    font-size: 15px;
+    color: gray;
+    margin-top: 10px;
+    line-height: normal;
+}
+
+.detailClassRight{
+    width: 35%;
+    float: right;
+}
+
+.detailClassBox{
+    border: 2px solid #ededed;
+    border-radius: 8px;
+    padding: 10px;
+}
+
+.detailClassContent{
+    font-size: 20px;
+    margin-top: 50px;
+    line-height: normal;
+}
+
+.detailClassLessonTitle{
+    margin-top: 50px;
+    font-size: 20px;
+}
+
+.detailClassLessonIntro{
+    margin-top: 5px;
+    line-height: normal;
+    color: gray;
+}
+
+.detailClassVideo{
+    margin-top: 30px;
+}
+
+.detailClassImageContainer{
+    max-width: 95%;
+    width: auto;
+    height: 250px;
+    overflow: hidden;
+    margin-right: auto;
+    margin-left: auto;
+    margin-bottom: 0px;
+}
+
+.detailClassImage{
+    align-content: center;
+    height: 100%;
+}
+
+.detailClassPrice{
+    color: #810000;
+    font-size: 20px;
+    font-weight: bold;
+    margin-left: 35px;
+    line-height: normal;
+    margin-top: 15px;
+}
+
+.detailClassButtonContainer{
+    width: 100%;
+    height: 60px;
+    align-content: center;
+    margin-bottom: 5px;
+    margin-top: 5px;
+}
+
+.detailClassButton{
+    background-color: #990000;
+    color: white;
+    margin: 0px 0px 0px 30px;
+    height: 50px;
+    font-size: 15px;
+    position: relative;
+    top: -30px;
+    width: 85%;
+}
+
+.detailClassList{
+    margin-top: 30px;
+}
+
+.detailClassListItemWrapper{
+    color: black;
+    width: 100%;
+}
+
+.detailClassListItemWrapper:hover{
+    color: #990000;
+}
+
+.detailClassListItem{
+    margin: 24px 12px 24px 12px;
+}
+
+.detailClassList .ant-list-item{
+    padding: 0px;
+    cursor: pointer;
+}
+
+.detailClassList .ant-list-item:hover{
+    background-color: #ededed;
+}
+
+.clear{
+    clear: both;
+}
 
 
 
