--- a/src/components/Cart/index.css
+++ b/src/components/Cart/index.css
@@ -1,14 +1,14 @@
 .left{
     float: left;
-    padding-left: 50px;
-    width: 600px;
+    padding-left: 50px !important;
+    width: 50% !important;
 }
 
 .right{
     float: right;
-    padding-left: 50px;
-    width: 400px;
-    margin-right: 200px;
+    padding-left: 50px !important;
+    width: 30% !important;
+    margin-right: 10% !important;
 }
 
 h1{
@@ -63,4 +63,16 @@ hr{
     padding: 15px;
     height: 50px;
     margin-left: 33.3%;
+}
+
+.itemContent{
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 3;
+}
+
+.cartPrice{
+    color: #990000;
 }
